--- a/.github/workflows/polling_bot.yml
+++ b/.github/workflows/polling_bot.yml
@@ -2,24 +2,24 @@ name: Telegram Bot Polling
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # runs every 5 minutes
-  workflow_dispatch:        # allows manual run
+    - cron: '*/5 * * * *'  # every 5 minutes
+  workflow_dispatch:        # manual run
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          pip install python-telegram-bot yt-dlp requests
+          pip install "python-telegram-bot>=20.3" yt-dlp requests
 
       - name: Run Telegram Bot
         env:
