--- a/.github/workflows/polling_bot.yml
+++ b/.github/workflows/polling_bot.yml
@@ -1,30 +1,26 @@
-name: Telegram Bot Polling
+name: Telegram Bot
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'  # every 5 minutes
-  workflow_dispatch:        # manual run
+  push:
+    branches:
+      - main
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-
+          python-version: 3.11
       - name: Install dependencies
         run: |
-          pip install "python-telegram-bot>=20.3" yt-dlp requests
-
-      - name: Run Telegram Bot
+          python -m pip install --upgrade pip
+          pip install python-telegram-bot yt-dlp requests
+      - name: Run Bot
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           LINKBOX_API_TOKEN: ${{ secrets.LINKBOX_API_TOKEN }}
           LINKBOX_FOLDER_ID: ${{ secrets.LINKBOX_FOLDER_ID }}
-        run: |
-          python bot/bot.py
+        run: python bot/bot.py
