--- a/.github/workflows/polling_bot.yml
+++ b/.github/workflows/polling_bot.yml
@@ -1,26 +1,30 @@
-name: Telegram Bot
+name: Telegram YouTube Bot
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      LINKBOX_API_TOKEN: ${{ secrets.LINKBOX_API_TOKEN }}
+      LINKBOX_FOLDER_ID: ${{ secrets.LINKBOX_FOLDER_ID }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
           python-version: 3.11
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install python-telegram-bot yt-dlp requests
-      - name: Run Bot
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          LINKBOX_API_TOKEN: ${{ secrets.LINKBOX_API_TOKEN }}
-          LINKBOX_FOLDER_ID: ${{ secrets.LINKBOX_FOLDER_ID }}
+          pip install python-telegram-bot==20.3 yt-dlp requests
+
+      - name: Run Telegram bot
         run: python bot/bot.py
