--- a/.github/workflows/polling_bot.yml
+++ b/.github/workflows/polling_bot.yml
@@ -2,17 +2,23 @@ name: Telegram YouTube Bot
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+    env:
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      LINKBOX_API_TOKEN: ${{ secrets.LINKBOX_API_TOKEN }}
+      LINKBOX_FOLDER_ID: ${{ secrets.LINKBOX_FOLDER_ID }}
 
-      - name: Setup Python
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
@@ -22,9 +28,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Bot
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          LINKBOX_API_TOKEN: ${{ secrets.LINKBOX_API_TOKEN }}
-          LINKBOX_FOLDER_ID: ${{ secrets.LINKBOX_FOLDER_ID }}
+      - name: Run Telegram bot
         run: python bot/bot.py
